--- a/html/projects/photography.html
+++ b/html/projects/photography.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../css/footer.css">
     <link rel="stylesheet" href="../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../css/pointer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -28,9 +29,7 @@
     
     <div class="grid grid-photography"></div>
     <section id="landing-section">
-        <h1>Alvina</h1>
-        <p>2022</p>
-        <br>
+        <h1>Photography</h1>
     </section>
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
