--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/project-window.css">
     <link rel="stylesheet" href="css/page-index.css">
     <link rel="stylesheet" href="css/pointer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -30,11 +31,10 @@
         </ul>
     </navbar>
     
-    <div class="grid grid-index-1"></div>
+    <div class="grid grid-index-1" style="height: calc(3vw * 13 + .1em);"></div>
     <section id="landing-section">
         <h1>Alvina</h1>
-        <p>2022</p>
-        <br>
+        <p>2023</p>
     </section>
 
     <div class="div-row" id="index-main-section">
@@ -63,7 +63,7 @@
                     <a class="btn1 project-window-btn-more" id='project-link'>Discover</a>
                     <div class="project-card-data">
                         <div class="project-card-content">
-                            <p id="project-nav-title" class="project-card-title" ></p>
+                            <p id="project-nav-title" class="project-window-title" ></p>
                             <div id='new-tag' class="scroll-text-new-div new-tag">
                                 <div style="width: 1000px">
                                     <div class="scroll-text-new" >
@@ -82,7 +82,7 @@
                     </div>
                     <div class="project-window2" href="./html/index/jeu_video.html">
                         <div class="project-window-navbar">
-                            <p class="project-card-title" id="project-id"></p>
+                            <p class="project-window-title" id="project-id"></p>
                         </div>
                         <div class="project-window-content">
                             <h3 id="project-title"></h3>
