--- a/html/contact.html
+++ b/html/contact.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/project-window.css">
     <link rel="stylesheet" href="../css/page-contact.css">
     <link rel="stylesheet" href="../css/pointer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -31,26 +32,21 @@
         </ul>
     </navbar>
     
-    <div class="grid grid-contact-1"></div>
+    <div class="grid grid-contact-1" style="height: calc(3vw * 8 + .1em);"></div>
     <section id="landing-section" class="div-row">
         <div class="div-column">
-            <h1>Alvina</h1>
-            <p>2022</p>
+            <h1>Contact</h1>
         </div>
-        <br>
-
     </section>
 
-<!------------------------------------------------------ PROJETS ------------------------------------------------>
-
-    <section id="contact-section" class="div-row">
+    <section id="contact-section" class="div-row" style="margin-bottom: 40px;">
         <div class="div-row" style="margin-top: 5px;">
             <p>Hi there, to contact me you can copy my email adress by clicking on the image on the right. I'm always happy to talk :D</p>
         </div>
         <div class="div-row" style="justify-content: flex-end;">
             <div class="project-window2" href="./html/index/jeu_video.html">
                 <div class="project-window-navbar">
-                    <p class="project-card-title" id="project-id">Social media</p>
+                    <p class="project-window-title" id="project-id">Social media</p>
                 </div>
                 <div class="project-window-content div-row">
                     <a href="https://www.linkedin.com/in/alvina-dr/" target="_blank"><img src="../img/icons/linkedin.svg" class="icon-social-media"/></a>
@@ -61,14 +57,14 @@
                 <img class="project-window1-image" src="../img/photomontage/P1.jpg" id="mail-zone"/>
                 <div class="project-card-data">
                     <div class="project-card-content" style="display: flex; justify-content: space-between;">
-                        <p id="project-nav-title" class="project-card-title">Click me</p>
-                        <p id="tooltip" class="project-card-title" style="width: fit-content; justify-self: flex-end; background-color: transparent; color: transparent; text-transform: uppercase; padding: 0 3px;">Copied</p>
+                        <p id="project-nav-title" class="project-window-title">Click me</p>
+                        <p id="tooltip" class="project-window-title" style="width: fit-content; justify-self: flex-end; background-color: transparent; color: transparent; text-transform: uppercase; padding: 0 3px;">Copied</p>
 
                     </div>
                 </div>
             </div>
         </div>
-    </section><br><br><br><br><br>
+    </section>
        
     <div class="scroll-text-div">
         <div style="width: 10000000px">
