fix bugs br etc

--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,6 @@
     </navbar>
     
     <div class="grid grid-about-1"></div>
-    <!-- <div class="grid grid-about-2"></div> -->
     <section id="landing-section">
         <h1>About</h1>
     </section>
@@ -53,7 +52,7 @@
 
     </section>
 
-    <section id="experience-section">
+    <section id="experience-section" style="margin-bottom: 70px;">
         <h3>Experience</h3>
         <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse. I later entend to continue with a master in video game programming, hopefully at ENJMIN in Angoulême (wink wink).</p>    
         <p>Here are my English and French curriculum. Don't worry, no download it opens in a blank page :D</p>
