--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
                 <p>Hi there ! I'm a French student, working part time at TavroxGames in Toulouse. I enjoy making video games and programming in general. Big Doctor Who and Percy Jackson fan, I also love playing narrative video games such as Life Is Strange, Disco Elysium or Detroit Become Human. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>   
                 <a href="html/about.html#about-me-section" class="btn-more">More &#10151;</a>
             </div>
-            <br>
+            
             <div>
                 <h3>Experience</h3>
                 <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse.</p>    
                 <a href="html/about.html#experience-section" class="btn-more">More &#10151;</a>
             </div>
-            <br>
+            
         </section>
 
         <!-- PROJET SECTION -->
-        <section id="project-section">
+        <section id="project-section" style="margin-bottom: 120px;">
             <div class="div-row project-div">
                 <div class="project-window1" >
                     <img class="project-window1-image text-zone" id='project-image-a' src="./img/cover-favorite.jpg" />
@@ -86,7 +86,7 @@
                         </div>
                         <div class="project-window-content">
                             <h3 id="project-title"></h3>
-                            <p id="project-text"></p><br>
+                            <p id="project-text"></p>
                         </div>
                         <div style="position:absolute; bottom: 0; right:0; padding: 5px; display: flex; align-items: flex-end;">
                             <button id="left-button">◄</button>
